--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -77,6 +77,7 @@ on init
     chmod 0666 /sys/class/devfreq/dmc/system_status
     chown root system /dev/cec0
     chmod 0664 /dev/cec0
+    chmod 666 /sys/class/rtc/rtc0/bootalarm
 
 on early-init
     write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor performance
