A10-3588: uart: add permission
Change-Id: I3587996a1e873828363b477b21de838dee2dfff1
Signed-off-by: goenjoy <goenjoy@namtso.com>

--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -79,6 +79,7 @@ on init
     chmod 0664 /dev/cec0
     chmod 666 /sys/class/rtc/rtc0/bootalarm
 	chmod 666 /sys/class/mcu/mculed
+	chmod 666 /dev/ttysWK*
 
 on early-init
     write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor performance
