cpu: modify policy0/scaling_governor to performance for wifi throughput testing
Change-Id: I779f864fb0832db74d5a71e74ee58ecdac54f9e7
Signed-off-by: goenjoy <goenjoy@namtso.com>

--- a/init.rk3588.rc
+++ b/init.rk3588.rc
@@ -12,7 +12,7 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 0
     write /sys/devices/system/cpu/cpu6/cpufreq/scaling_min_freq 0
 
-    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedutil
+    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor performance
     write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedutil
     write /sys/devices/system/cpu/cpufreq/policy6/scaling_governor schedutil
 
@@ -34,7 +34,7 @@ on charger
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 0
     write /sys/devices/system/cpu/cpu6/cpufreq/scaling_min_freq 0
 
-    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor schedutil
+    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor performance
     write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor schedutil
     write /sys/devices/system/cpu/cpufreq/policy6/scaling_governor schedutil
 
